<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.spdx</groupId>
  <artifactId>java-spdx-library</artifactId>
  <version>0.0.2-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>java-spdx-library</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
    	<groupId>org.apache.logging.log4j</groupId>
    	<artifactId>log4j-slf4j-impl</artifactId>
    	<version>2.10.0</version>
    </dependency>
    <dependency>
    	<groupId>org.apache.commons</groupId>
    	<artifactId>commons-lang3</artifactId>
    	<version>3.5</version>
    </dependency>
    <dependency>
    	<groupId>org.jsoup</groupId>
    	<artifactId>jsoup</artifactId>
    	<version>1.11.3</version>
    </dependency>
    <dependency>
    	<groupId>com.google.code.gson</groupId>
    	<artifactId>gson</artifactId>
    	<version>2.8.0</version>
    </dependency>
    <dependency>
    	<groupId>net.jodah</groupId>
    	<artifactId>concurrentunit</artifactId>
    	<version>0.4.6</version>
    	<scope>test</scope>
    </dependency>
    <dependency>
    	<groupId>com.google.code.findbugs</groupId>
    	<artifactId>jsr305</artifactId>
    	<version>3.0.2</version>
    </dependency>
  </dependencies>
  
  <build>
  		<resources>
			<resource>
				<targetPath>resources</targetPath>
				<filtering>false</filtering>
				<directory>resources</directory>
				<includes>
					<include>**/*</include>
				</includes>
			</resource>
			<resource>
				<targetPath>META-INF</targetPath>
				<filtering>false</filtering>
				<directory>.</directory>
				<includes>
					<include>LICENSE</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</testResource>
			<testResource>
				<filtering>false</filtering>
				<directory>TestFiles</directory>
				<includes>
					<include>**/*</include>
				</includes>
			</testResource>
		</testResources>
		<plugins>
		<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>${project.build.sourceEncoding}</encoding>
					<showDeprecation>true</showDeprecation>
					<showWarnings>true</showWarnings>
					<optimize>true</optimize>
				</configuration>
			</plugin>
		</plugins>
  </build>
</project>
